--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
-    "sort-by": "^1.2.0"
-  },
-  "devDependencies": {
+    "sort-by": "^1.2.0",
     "react-scripts": "1.0.8"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
